--- a/weathertry.html
+++ b/weathertry.html
@@ -1,75 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather.io</title>
-    <link rel="icon" href="icon.png">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,800&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="./style.css" />
-    <script src="./script.js" defer></script>
-</head>
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-<body onload="myFunction()">
-    <div id="loading"></div>
-    <div class="cont">
-        <div class="one">
-            <h1>🌦️ Weather.io ☔️</h1>
-        </div>
-    </div>
-    <div class="two">
-        <div class="card">
-            <div class="search">
-                <input type="text" class="search-bar" placeholder="Search" />
-                <button>
-                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" height="1em"
-                        width="1.5em" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd"
-                            d="M10.442 10.442a1 1 0 011.415 0l3.85 3.85a1 1 0 01-1.414 1.415l-3.85-3.85a1 1 0 010-1.415z"
-                            clip-rule="evenodd"></path>
-                        <path fill-rule="evenodd"
-                            d="M6.5 12a5.5 5.5 0 100-11 5.5 5.5 0 000 11zM13 6.5a6.5 6.5 0 11-13 0 6.5 6.5 0 0113 0z"
-                            clip-rule="evenodd"></path>
-                    </svg>
-                </button>
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Weather App</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <form id="search-form" class="mb-3">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Type a city.."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
             </div>
-            <div class="weather loading">
-                <h2 class="city">Weather in Mumbai</h2>
-                <h1 class="temp">51°C</h1>
-                <div class="flex">
-                    <img src="https://openweathermap.org/img/wn/04d.png" alt="" class="icon" />
-                    <div class="description">Cloudy</div>
+          </form>
+          <div class="overview">
+            <h1 id="city"></h1>
+            <ul>
+              <li>Last updated: <span id="date"></span></li>
+              <li id="description"></li>
+            </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img src="" alt="Clear" id="icon" class="float-left" />
+                <div class="float-left">
+                  <strong id="temperature"></strong
+                  ><span class="units"
+                    ><a href="#" id="celsius-link" class="active">°C</a> |
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
                 </div>
-                <div class="other">
-                    <div class="humidity">Humidity: 60%</div>
-                    <div class="wind">Wind Speed: 6.2 km/h</div>
-                </div>
+              </div>
             </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
+              </ul>
+            </div>
+          </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/wecodeschool/vanilla-weather-app"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Matt Delac
+        </small>
+      </div>
     </div>
-    <div class="three">
-        <div class="name"><a href="http://yashw.bio.link">~ Yash Waghmare</a></div>
-    </div>
-    <script>
-        var preloader = document.getElementById('loading');
-        function myFunction() {
-            preloader.style.display = 'none';
-        }
-    </script>
-    <script type="text/javascript" src="./vanilla-tilt.js"></script>
-    <script type="text/javascript">
-        VanillaTilt.init(document.querySelector(".card"), {
-            max: 15,
-            glare: true,
-            reverse: true,
-            "max-glare": 0.5,
-            speed: 400
-        });
-        VanillaTilt.init(document.querySelectorAll(".card"));
-    </script>
-</body>
+    <script src="src/app.js"></script>
+  </body>
+</html>
